resources/k8s-example/kubernetes/fe-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: k8s-real-fe
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: k8s-real-fe
    spec:
      containers:
      - name: k8s-real-fe
        image: icrosby/k8s-real-fe
        ports:
        - containerPort: 80
