resources/k8s-example/kubernetes/fe-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-real-fe
  labels:
    app: k8s-real-fe
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: k8s-real-fe
